<resources>
    <string name="app_name">TMI</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">T M I</string>
    <string name="search">검색</string>
    <string name="search_hint">지역명 또는 산이름</string>
    <string name="list_title_text">선택한 지역의 산 목록</string>
    <string name="list_title_hint">(위험지수 낮은 순)</string>
    <string name="mountain_name_temp">아차산</string>
    <string name="risk_title">오늘의 산악사고 위험지수</string>
    <string name="address">주소\n주소</string>
    <string name="current_location_lat">위도</string>
    <string name="current_location_lng">경도</string>
    <string name="moutain_name">산이름</string>
    <string name="list_shelter_text">대피소 목록</string>
    <string name="list_shelter_hint">(선택한 산에 있는 대피소 목록)</string>
    <string name="shelter_name_temp">양폭 대피소</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_duplicate_check">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="withoutLogin">로그인 없이 사용하기</string>
    <string name="firstTime">처음 방문하셨나요?</string>
    <string name="signUp">회원가입</string>
    <string name="googleLogin">구글 로그인</string>
    <string name="duplication_check">중복확인</string>
    <string name="nickname">닉네임</string>
    <string name="setting">설정</string>
    <string name="resetting">재설정</string>
    <string name="checkOkay">확인 완료</string>
    <string name="email_validation_check_false">올바른 이메일 형식이 아닙니다.</string>
    <string name="passwordCheckDone">비밀번호 확인</string>
    <string name="passwordCheckfalse">비밀번호가 다릅니다.</string>
</resources>