<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="kr.co.gracegirls.tmi.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/record"
        android:name="kr.co.gracegirls.tmi.view.record.RecordFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/sos"
        android:name="kr.co.gracegirls.tmi.view.sos.SosFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_sos" />
</navigation>