<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignUpActivity">

    <kr.co.gracegirls.tmi.module.TitleBar
        android:id="@+id/signUpTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailContentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/common_margin_16dp"
        android:background="@drawable/background_gray_line_radius_7dp"
        android:padding="@dimen/common_margin_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTitleBar">

        <TextView
            android:id="@+id/emailText"
            style="@style/CommonText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/common_margin_15dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@id/emailDuplicationCheckButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/emailDuplicationCheckButton"
            style="@style/CommonText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gray_line_radius_7dp"
            android:gravity="center"
            android:text="@string/duplication_check"
            android:textAlignment="center"
            android:textSize="@dimen/common_margin_15dp"
            app:layout_constraintBottom_toBottomOf="@id/emailInput"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/emailDuplicationCheckButton2"
            style="@style/CommonText.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_green_fill_radius_7dp"
            android:elevation="@dimen/common_margin_15dp"
            android:gravity="center"
            android:text="@string/resetting"
            android:textAlignment="center"
            android:textSize="@dimen/common_margin_15dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/emailInput"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nicknameContentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/common_margin_16dp"
        android:background="@drawable/background_gray_line_radius_7dp"
        android:padding="@dimen/common_margin_12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailContentBox">

        <TextView
            android:id="@+id/nicknameText"
            style="@style/CommonText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nicknameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/common_margin_15dp"
            app:layout_constraintEnd_toStartOf="@+id/nicknameUseButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nicknameUseButton"
            style="@style/CommonText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gray_line_radius_7dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textSize="@dimen/common_margin_15dp"
            app:layout_constraintBottom_toBottomOf="@id/nicknameInput"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/nicknameUseButton2"
            style="@style/CommonText.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_green_fill_radius_7dp"
            android:elevation="@dimen/common_margin_15dp"
            android:gravity="center"
            android:text="@string/resetting"
            android:textAlignment="center"
            android:textSize="@dimen/common_margin_15dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/nicknameInput"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordContentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/common_margin_16dp"
        android:background="@drawable/background_gray_line_radius_7dp"
        android:padding="@dimen/common_margin_12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nicknameContentBox">

        <TextView
            android:id="@+id/passwordText"
            style="@style/CommonText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/common_margin_15dp"
            android:inputType="numberPassword"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordDuplicateContentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/common_margin_16dp"
        android:background="@drawable/background_gray_line_radius_7dp"
        android:padding="@dimen/common_margin_12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordContentBox">

        <TextView
            android:id="@+id/passwordDuplicateText"
            style="@style/CommonText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_duplicate_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passwordDuplicateTrue"
            style="@style/CommonText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordCheckDone"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="@dimen/common_margin_12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/passwordDuplicateText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passwordDuplicateFalse"
            style="@style/CommonText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordCheckfalse"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/common_margin_12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/passwordDuplicateText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordDuplicateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/common_margin_15dp"
            android:inputType="numberPassword"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/signUpDoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_green_fill_radius_10dp"
        android:text="완료"
        android:textColor="@color/logo"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUpDoneButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_gray_line_radius_7dp"
        android:text="완료"
        android:textColor="@android:color/darker_gray"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>