<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <kr.co.gracegirls.tmi.module.TitleBar
        android:id="@+id/loginTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailText"
        style="@style/CommonText.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="143dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitleBar" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@id/emailText"
        app:layout_constraintTop_toTopOf="@id/emailText"
        tools:ignore="Autofill,LabelFor" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/common_margin_10dp"
        android:layout_marginEnd="30dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/emailText"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <TextView
        android:id="@+id/passwordText"
        style="@style/CommonText.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:inputType="numberPassword"
        app:layout_constraintStart_toEndOf="@id/passwordText"
        app:layout_constraintTop_toTopOf="@id/passwordText"
        tools:ignore="Autofill,LabelFor" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/common_margin_10dp"
        android:layout_marginEnd="30dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/passwordText"
        app:layout_constraintTop_toBottomOf="@id/passwordText" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_green_fil_radius_10dp"
        android:text="@string/login"
        android:textColor="@color/logo"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText" />




</androidx.constraintlayout.widget.ConstraintLayout>