<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/common_margin_15dp"
    android:paddingEnd="@dimen/common_margin_15dp"
    tools:context=".view.home.HomeFragment">

    <kr.co.gracegirls.tmi.module.TitleBar
        android:id="@+id/home_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_17dp"
        android:layout_marginBottom="@dimen/common_margin_11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_content_box"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/common_margin_11dp"
        android:background="@drawable/background_green_line_radius_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title_bar">

        <TextView
            android:id="@+id/search_text_view"
            style="@style/CommonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_8dp"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search_input"
            style="@style/CommonText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/common_margin_6dp"
            android:layout_marginTop="@dimen/common_margin_13dp"
            android:layout_marginBottom="@dimen/common_margin_13dp"
            android:background="@null"
            android:hint="@string/search_hint"
            android:textAlignment="textStart"
            android:textSize="@dimen/common_margin_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintStart_toEndOf="@id/search_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_margin_15dp"
            android:background="@null"
            android:src="@drawable/icon_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/temp_map_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_17dp"
        android:src="@drawable/temp_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_content_box"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/list_title"
        style="@style/CommonText.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_20dp"
        android:text="@string/list_title_text"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp_map_img" />

    <TextView
        android:id="@+id/list_title_hint"
        style="@style/CommonText.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_20dp"
        android:text="@string/list_title_hint"
        android:textAlignment="textStart"
        android:textSize="@dimen/common_margin_13dp"
        app:layout_constraintBottom_toBottomOf="@id/list_title"
        app:layout_constraintStart_toEndOf="@id/list_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_margin_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mountain_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_mountain_list" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>